--- a/implementation.tex
+++ b/implementation.tex
@@ -16,7 +16,7 @@ Write how the sniffer has been implemented on the Raspberry Pi \dots
 
 Data collector on a Raspberry Pi model 2B
 
-EDUP 802.11n Wi-Fi Dongle (Range ~10 meters) + Scapy for Wi-Fi packets sniffing
+EDUP 802.11n Wi-Fi Dongle (Range $\sim$ 10 meters) + Scapy for Wi-Fi packets sniffing
 
 RTC Board for timestamp detection
 
