--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 \label{cha:intro}
 \vspace{0.4 cm} 
 
-Brief introduction of the internship and the project done at U-Hopper.\footnote{ website: https://www.u-hopper.com/ }
+Brief introduction of the internship and the project done at U-Hopper.\footnote{ website: \url{https://www.u-hopper.com/} }
 
 
 \section{Problem statement}
