--- a/evaluation.tex
+++ b/evaluation.tex
@@ -14,22 +14,40 @@ Starting by describing where and how the system is tested for the experimental v
 
 Write about the experiments \dots
 
-Experimental environment considerations.
+Due to the complex situation of this period due to COVID-19 and the limitations imposed on people, it was necessary to test the functioning of the system at home and verify the feasibility of the first part of the proposed method, i.e. detect the devices in the area. The tests were conducted on different days with the aim of revealing how many devices are in a determinate room of the house. As can be seen from figure ~\ref{fig:sniffertest}, $\sim$ 66.000 Wi-Fi probe request frames are collected and the values of RSSI of the detected devices are divided into two main ranges. A value of RSSI in range -35 $\div$ -69 indicates that the device is close to the data collector, i.e. in the kitchen. Instead, a value of RSSI in range -69 $\div$ -91 indicates that the device is away from the data collector, i.e. not in the kitchen. Random encounters that do not belong to the house are rare and there are randomized MACs related to devices that are not connected to the home Wi-Fi network.
 
-Management of the different time-series + drawings about that:
-GT: random point process
-Probe revelations: random point process
-Presence of devices: temporal range based on revelations
+\begin{figure}[h]
+\centering 
+\includegraphics[width=1.02\textwidth]{images/sniffertest} 
+\caption{Presentation of home test results.}
+\label{fig:sniffertest}
+\end{figure}
 
-Data collector on a Raspberry Pi model 2B has been placed in a place of social interest.
+Subsequently, with the reduction of restrictions on personal mobility, it was possible to conduct an experimental validation and a data collection in a place of social interest with moderate mobility. The case study is to estimate the customers present in a cafe, which allowed me to conduct the experimentation in this delicate moment.
 
-In this place of social interest, I manually collected the ground truth on my computer.
+The data collector implemented on a Raspberry Pi model 2B has been placed in this cafe and connected to an electrical source. In this place of social interest, I manually collected the ground truth with a random look strategy on my computer for training and evaluating the model.
 
-Mosquitto MQTT Broker, the MongoDB database and the Back-End part for receiving and storing the data in the database have been executed on the U-Hopper server.
+The Mosquitto MQTT Broker, the MongoDB database and the Back-End part for receiving and storing the data in the database have been executed on the U-Hopper server.
 
-Final Back-End part for analyzing the data has been executed on my computer. Setting of the cleaning parameters. Training and preparation of the ML model with the ground truth.
+Experimental environment considerations: Wi-Fi dongle (with a range of $\sim$ 10 meters) can cover all the cafe area and detect all the devices of the people. The cafe does not have a Wi-Fi network but, when I go there to collect the ground truth, it uses the hotspot from my phone to send data to the server.
 
-In the end, we store the results in the database instead of sending them to a hypothetical consumer of this type of system.
+The final part of the Back-End for data analysis was executed on my computer to adapt the parameters of the cleaning part for the case study. After cleaning the data and obtaining the presence of devices, it is possible to prepare and train the Machine Learning model with the collected ground truth and the number of devices revealed in the timestamps when the ground truth was collected.
+
+% In the end, we store the results in the database instead of sending them to a hypothetical consumer of this type of system.
+
+Management of the different time processes, shown in figure ~\ref{fig:timeseries}:
+\begin{itemize}
+  \item Probe revelations from the data collector: random point process
+  \item Presence of devices: temporal range based on revelations of the MAC
+  \item Collecting ground truth: sampling of the number people present, random point process asynchronous with respect to the probe revealed and devices revealed
+\end{itemize}
+
+\begin{figure}[h]
+\centering 
+\includegraphics[width=0.9\textwidth]{images/timeseries} 
+\caption{Illustration of the management of the different time processes.}
+\label{fig:timeseries}
+\end{figure}
 
 
 \section{Evaluation of the results}
@@ -38,11 +56,11 @@ In the end, we store the results in the database instead of sending them to a hy
 
 Write the evaluation \dots
 
-We calculated the following parameters for evaluating the KPIs, taking as the ground truth the number of people that I have manually annotated, with a random look strategy of some hours per day in different time slots:
+Once the Machine Learning model is trained with the collected ground truth and the number of devices revealed at the timestamps when the ground truth is collected, the estimates of people are generated in these timestamps. We calculated the following parameters for evaluating the proposed system estimates and satisfy the KPIs (Key Performance Indicators), taking as the ground truth the number of people I manually annotated, with a random look strategy of some hours per day in different time slots:
 
 Error mean = mean(abs(people\_present - people\_estimated))
 
-scaled\_MSE\_trend +=  $\Bigl(\frac{people\_present - people\_estimated}{people\_present} \Bigr)^{2}$
+scaled\_MSE\_trend += $\Bigl(\frac{people\_present - people\_estimated}{people\_present} \Bigr)^{2}$
 
 Scaled\_MSE\_trend/count = $\frac{scaled\_MSE\_trend}{rivelations}$
 
