--- a/implementation.tex
+++ b/implementation.tex
@@ -14,17 +14,14 @@ Starting by describing the implementation of the data collector on a Raspberry P
 
 Write how the sniffer has been implemented on the Raspberry Pi \dots
 
-Data collector on a Raspberry Pi model 2B
-
-EDUP 802.11n Wi-Fi Dongle (Range $\sim$ 10 meters) + Scapy for Wi-Fi packets sniffing
-
-RTC Board for timestamp detection
-
-BLAKE2s for MAC address anonymization
-
-Netifaces for managing the connection
-
-Paho-MQTT for the MQTT transmission
+Data collector on a Raspberry Pi model 2B using:
+\begin{itemize}
+  \item EDUP 802.11n Wi-Fi Dongle (Range $\sim$ 10 meters) + Scapy for Wi-Fi packets sniffing
+  \item RTC Board for timestamp detection
+  \item BLAKE2s for MAC address anonymization
+  \item Netifaces for managing the connection
+  \item Paho-MQTT for the MQTT transmission
+\end{itemize}
 
 
 % \section{Implementation of broker MQTT}
@@ -41,13 +38,10 @@ Paho-MQTT for the MQTT transmission
 Write how the Back-End for analysis has been implemented \dots
 
 Docker Containers:
-
-MQTT broker: Mosquitto \footnote{ website: https://hub.docker.com/\_/eclipse-mosquitto }
-
-Database: MongoDB \footnote{ website: https://hub.docker.com/\_/mongo }
-
-Receiver with MQTT client using paho-MQTT for receiving the data and Mongo client using pymongo for storing data on MongoDB
-
-Analyzer with Mongo client using pymongo and pandas to read and manage the data
-
-Sklearn is used to analyze this data and to implement the machine learning part
+\begin{itemize}
+  \item MQTT broker: Mosquitto\footnote{ website: \url{https://hub.docker.com/_/eclipse-mosquitto} }
+  \item Database: MongoDB\footnote{ website: \url{https://hub.docker.com/_/mongo} }
+  \item Receiver with MQTT client using paho-MQTT for receiving the data and Mongo client using pymongo for storing data on MongoDB
+  \item Analyzer with Mongo client using pymongo and pandas to read and manage the data
+  \item Sklearn is used to analyze this data and to implement the machine learning part
+\end{itemize}
