--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -26,7 +26,7 @@ These methods rely on the use of cameras to get the data to analyze and therefor
 A not very popular but interesting method of counting the number of people is to analyze the audio of a place with a microphone and count the different audio tones \cite{kannan2012low}. Afterward, Valle proposed a more sophisticated prediction model to estimate the occupancy of a room which borrows speech recognition tradition and is based on Gaussian mixtures and hidden Markov models \cite{valle2016abroa}.
 These methods can be inaccurate due to high ambient noise and the limitations on the quality of the microphones must be considered during the analysis. In addition, other sounds from smartphones or radios must be filtered to avoid being counted as people. However, as in the case of video methods, the analysis of the voice of unknown people is always a privacy issue as decreed by the GDPR. Therefore, these types of solutions cannot be used to solve our problem.
 
-As reported by wearesocial.com in the Digital 2020 report \footnote{https://wearesocial.com/digital-2020}, 67\% of the world population is a mobile phone user. In Europe, Internet users are equal to 84\% of the population and 92\% of total Internet users is a mobile phone user. In this new era dominated by smartphones, radio-frequency solutions to exploit the signals of these devices to count people are increasing. In recent years Wi-Fi, Bluetooth, Bluetooth Low Energy, LTE (Long Term Evolution) approaches have been developed.
+As reported by wearesocial.com in the Digital 2020 report\footnote{\url{https://wearesocial.com/digital-2020}}, 67\% of the world population is a mobile phone user. In Europe, Internet users are equal to 84\% of the population and 92\% of total Internet users is a mobile phone user. In this new era dominated by smartphones, radio-frequency solutions to exploit the signals of these devices to count people are increasing. In recent years Wi-Fi, Bluetooth, Bluetooth Low Energy, LTE (Long Term Evolution) approaches have been developed.
 
 Many researchers have investigated the possibility of estimating the number of people using the two most popular standards for wireless communication, i.e. Wi-Fi and Bluetooth. In 2014 Schauer et al. performed this type of comparison with the aim of creating a pedestrian flow estimation system. They stated that only a fraction of surrounding devices could have been tracked by periodical Bluetooth scans. Therefore Bluetooth-based estimations were less accurate, showing an average correlation to the ground truth of only 0.53 in the best case. In contrast to Bluetooth, Wi-Fi tracking provided a good approximation of crowd densities and pedestrian flows with an average correlation of 0.75 \cite{schauer2014estimating}.
 
