fix time series

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -35,7 +35,7 @@ The final part of the Back-End for data analysis was executed on my computer to 
 
 % In the end, we store the results in the database instead of sending them to a hypothetical consumer of this type of system.
 
-Management of the different time processes, shown in figure ~\ref{fig:timeseries}:
+Management of the different time processes, shown in figure ~\ref{fig:timeprocesses}:
 \begin{itemize}
   \item Probe revelations from the data collector: random point process
   \item Presence of devices: temporal range based on revelations of the MAC
@@ -44,9 +44,9 @@ Management of the different time processes, shown in figure ~\ref{fig:timeseries
 
 \begin{figure}[h]
 \centering 
-\includegraphics[width=0.9\textwidth]{images/timeseries} 
+\includegraphics[width=0.9\textwidth]{images/timeprocesses} 
 \caption{Illustration of the management of the different time processes.}
-\label{fig:timeseries}
+\label{fig:timeprocesses}
 \end{figure}
 
 
