--- a/evaluation.tex
+++ b/evaluation.tex
@@ -4,8 +4,8 @@
 
 Write about the evaluation case study \dots
 
-In chapter 5 the proposed system is validated and the results are evaluated.
-Starting by describing where and how the system is tested for the experimental validation and then presenting an evaluation of the achieved results. The data collector on a Raspberry Pi has been placed in a place of social interest. In this place of social interest, I manually collected the ground truth for training and evaluating the model. The Mosquitto MQTT Broker, the MongoDB database and the Back-End part for receiving and storing the data in the database have been executed on the U-Hopper server. The final Back-End part for analyzing the data has been executed on my computer to adapt the parameters and train the Machine Learning model. After this section, it will be clear how the system has been validated and what the results achieved by the proposed system are. Overall conclusions are discussed in the next section.
+In this chapter, the proposed system is validated and the results are evaluated.
+Starting by describing where and how the system is tested for the experimental validation and then presenting an evaluation of the achieved results. The data collector on a Raspberry Pi has been placed in a place of social interest. In this place of social interest, I manually collected the ground truth for training and evaluating the model. The Mosquitto MQTT Broker, the MongoDB database and the Back-End part for receiving and storing the data in the database have been executed on the U-Hopper server. The final Back-End part for analyzing the data has been executed on my computer to adapt the parameters and train the Machine Learning model. After this chapter, it will be clear how the system has been validated and what the results achieved by the proposed system are. Overall conclusions are discussed in the next chapter.
 
 
 \section{Experimental validation}
