--- a/implementation.tex
+++ b/implementation.tex
@@ -5,7 +5,7 @@
 Write about the implementation of the system \dots
 
 This chapter presents how the components of the system have been implemented.
-Starting by describing the implementation of the data collector on a Raspberry Pi and then explaining how the Mosquitto MQTT Broker, the MongoDB database and the two Back-End parts, one for receiving and storing the data and the other one for analyzing the data, has been implemented on Docker containers. After this section, it will be clear how the system was implemented for the testing and validation, that are discussed in the next section.
+Starting by describing the implementation of the data collector on a Raspberry Pi and then explaining how the Mosquitto MQTT Broker, the MongoDB database and the two Back-End parts, one for receiving and storing the data and the other one for analyzing the data, has been implemented on Docker containers. After this chapter, it will be clear how the system was implemented for the testing and validation, that are discussed in the next chapter.
 
 
 \section{Data collector implementation}
