--- a/system_design.tex
+++ b/system_design.tex
@@ -2,7 +2,7 @@
 \label{cha:system}
 \vspace{0.4 cm} 
 
-In this chapter, the methodology and the choices in the system design are presented. Starting by describing the components of the system with their functionalities (the blocks in the system architecture) and then explaining the working logic of the developed system. After this section, it will be clear which are the main parts of this system and how they cooperate to achieve the project goal.
+In this chapter, the methodology and the choices in the system design are presented. Starting by describing the components of the system with their functionalities (the blocks in the system architecture) and then explaining the working logic of the developed system. After this chapter, it will be clear which are the main parts of this system and how they cooperate to achieve the project goal.
 
 
 \section{System architecture}
