--- a/first_page.tex
+++ b/first_page.tex
@@ -21,10 +21,10 @@
   \vspace{2.2 cm} 
   \Large\textsc{Final Dissertation\\} 
   \vspace{1.2 cm} 
-  \Huge\textsc{Thesis Title\\}
+  \Huge\textsc{Estimating the number of people\\based on Wi-Fi signals\\}
 
 
-  \vspace{2.2 cm} 
+  \vspace{3.2 cm} 
   \begin{tabular*}{\textwidth}{ c @{\extracolsep{\fill}} c }
   \Large{Supervisors} & \Large{Student}\\
   \Large{Fabrizio Granelli} & \Large{Samuel Bortolin}\\
