--- a/system_design.tex
+++ b/system_design.tex
@@ -82,14 +82,14 @@ Instead, if there is a connection with the MQTT broker, the collected data is pu
 \begin{figure}[h!]
 \begin{minipage}[b]{8.5cm}
 \centering
-\includegraphics[width=0.8\textwidth]{images/flowconnection}
+\includegraphics[width=0.75\textwidth]{images/flowconnection}
 \caption{Flowchart representing the connection research logic.}
 \label{fig:flowconnection}
 \end{minipage}
 \ \hspace{2mm} \hspace{3mm} \
 \begin{minipage}[b]{8.5cm}
 \centering
-\includegraphics[width=0.8\textwidth]{images/flowstorage}
+\includegraphics[width=0.75\textwidth]{images/flowstorage}
 \caption{Flowchart representing the stored data publishing logic.}
 \label{fig:flowstorage}
 \end{minipage}
@@ -179,20 +179,22 @@ At this point, it is possible to get the number of devices present in the place 
 \begin{figure}
 \begin{minipage}[b]{8.5cm}
 \centering
-\includegraphics[width=0.8\textwidth]{images/flowrandom}
-\caption{Flowchart representing the logic of removing casual encounters.}
+\includegraphics[width=0.75\textwidth]{images/flowrandom}
+\caption{Flowchart representing the logic of removing random encounters.}
 \label{fig:flowrandom}
 \end{minipage}
 \ \hspace{2mm} \hspace{3mm} \
 \begin{minipage}[b]{8.5cm}
 \centering
-\includegraphics[width=0.8\textwidth]{images/flowblacklist}
+\includegraphics[width=0.75\textwidth]{images/flowblacklist}
 \caption{Flowchart representing the logic of making the blacklist.}
 \label{fig:flowblacklist}
 \end{minipage}
 \end{figure}
 
-Finally, data analysis is performed, as shown in the flowchart in figure~\ref{fig:flowML}. Trend (raising/lowering) and seasonality (repetition of the components) of the number of devices are extracted using a decomposition of the corresponding temporal series. Once these two variables are known, it is possible to apply to them the correct polynomial approximation relating to the current time slot to get the forecast of the people present in the place of interest. The best degree and coefficients of the polynomial approximation are calculated during the training phase/preparation of the model for each time slot of each day of the week, using manually-collected ground truth. Figure~\ref{fig:flowtrainML} shows the flowchart of the logic used in that phase.
+Finally, data analysis is performed, as shown in the flowchart in figure~\ref{fig:flowML}. Trend (raising/lowering) and seasonality (repetition of the components) of the number of devices are extracted using a decomposition of the corresponding temporal series. Once these two variables are known, it is possible to apply to them the correct polynomial approximation relating to the current time slot to get the forecast of the people present in the place of interest.
+
+The best degree and coefficients of the polynomial approximation are calculated during the training phase/preparation of the model for each time slot of each day of the week, using manually-collected ground truth. Figure~\ref{fig:flowtrainML} shows the flowchart of the logic used in that phase.
 
 % \begin{figure}[h]
 % \centering 
@@ -211,14 +213,14 @@ Finally, data analysis is performed, as shown in the flowchart in figure~\ref{fi
 \begin{figure}
 \begin{minipage}[b]{8.5cm}
 \centering
-\includegraphics[width=0.5\textwidth]{images/flowML}
+\includegraphics[width=0.45\textwidth]{images/flowML}
 \caption{Flowchart representing the data analysis logic.}
 \label{fig:flowML}
 \end{minipage}
 \ \hspace{2mm} \hspace{3mm} \
 \begin{minipage}[b]{8.5cm}
 \centering
-\includegraphics[width=0.5\textwidth]{images/flowtrainML}
+\includegraphics[width=0.45\textwidth]{images/flowtrainML}
 \caption{Flowchart representing the ML training logic.}
 \label{fig:flowtrainML}
 \end{minipage}
